Added PCA (python and Visualization)

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,7 @@
 			</div>
 		</div> -->
 		<button class="button" onclick="generateParallelCo()"> Display Parallel Coordinates</button>
+		<button class="button" onclick="generateViz()"> Display Viz</button>
 		<div class="viz"></div>
 		<script src="./static/main.js"></script>
 	</body>
