--- a/templates/index.html
+++ b/templates/index.html
@@ -87,8 +87,8 @@
                     </div>
                 </div>
 
-                <div class="w-100" style="margin-top:10px;"></div>
-                <div id="example" class="parcoords" style="width:1000px;height:240px;margin-top:25px"></div>
+                <div class="w-100" style="margin-top:5px;"></div>
+                <div id="example" class="parcoords" style="width:1000px; height:270px"></div>
                 <div class="col" id="chart0" style="margin-top:35px"></div>
                 <div class="col" id="chart1" style="margin-top:35px"></div>
                 <div class="col" id="chart2" style="margin-top:35px"></div>
@@ -138,9 +138,9 @@ var mycfg = {
 
 //Call function to draw the Radar chart
 //Will expect that data is in %'s
-RadarChart.draw("#chart0", d, mycfg, "attack");
-RadarChart.draw("#chart1", d, mycfg, "defense");
-RadarChart.draw("#chart2", d, mycfg, "physical");
+// RadarChart.draw("#chart0", d, mycfg, "attack");
+// RadarChart.draw("#chart1", d, mycfg, "defense");
+// RadarChart.draw("#chart2", d, mycfg, "physical");
 
 
     </script>
