--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
         <script src="./static/parcoords.standalone.js"></script>
         <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script> -->
         <!-- <script src="https://code.jquery.com/ui/1.11.3/jquery-ui.min.js"></script> -->
-        <script type="text/javascript" src="./static/script.js"></script>
+        <!-- <script type="text/javascript" src="./static/script.js"></script> -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
